# WebAssembly

./: README.md
scripts/: qjs_wasm_build.sh  repo_download.sh  upgrade.sh  version
scripts/quickjs/: CMakeLists.txt  build_wasm.sh  wasi-sdk.cmake
scripts/quickjs/npm/: CMakeLists.txt  build.sh
scripts/quickjs/npm/test/: run-tests.sh
scripts/quickjs/tools/: emcc-builder.sh  emsdk-installer.sh  wasi-builder.sh
scripts/test/: cli_run.sh  env.conf  env_setup.sh
